# Internship-2025

./: README.md  pyproject.toml
src/: emb.py  extracted_table.txt  extracted_text.txt  mongodb.py  pdf.py
src/api/: api.py  test.py
src/md/Key Remote Working Guidelines - Playbook/: Key Remote Working Guidelines - Playbook_meta.json
