[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    { name = "goravjhabakh", email = "goravjhabakh@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)", 
    "pandas (>=2.2.3,<3.0.0)", 
    "marker-pdf (>=1.7.3,<2.0.0)", 
    "torchvision (>=0.22.0,<0.23.0)",
]

[tool.poetry]
packages = [{ include = "rag", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"